--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.2",
+    "ag-grid-community": "^31.0.1",
+    "ag-grid-react": "^31.0.1",
     "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
